# cataloger

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
catalog_cli/: __init__.py  config.py  processor.py
catalog_cli/cli/: app.py
catalog_cli/io_excel/: reader.py  writer.py
catalog_cli/llm/: client.py
catalog_cli/logging/: setup.py
catalog_cli/prompting/: parser.py  prompt_builder.py
catalog_cli/tui/: progress.py
tests/: test_parser.py  test_writer.py
