[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-cli"
version = "0.1.0"
description = "CLI utility for generating category catalogs via DeepSeek API"
authors = [{name = "Auto Generated"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]~=0.12.3",
    "pandas~=2.2",
    "openpyxl~=3.1",
    "httpx~=0.27",
    "pydantic~=2.6",
    "rich~=13.7",
    "tenacity~=8.2",
    "pytest~=8.1",
]

[project.scripts]
catalog-cli = "catalog_cli.cli.app:app"
